--- a/estilo.css
+++ b/estilo.css
@@ -18,13 +18,37 @@ h1{
   width: 200px;
   height: 200px;
   background: blueviolet;
-  right: 0;
-  bottom: 0;
+  right: 1;
+  bottom: 1;
 }
 .menuPrincipal{
   position: absolute;
   width: 100%;
   height: 80px;
   background: rgb(206, 125, 20);
-}
+  font-family: 'Courier New', Courier, monospace;
+  top: 0;
+  left: 0;
 
+}
+nav ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: 0;
+}
+li{
+  float: left;
+}
+li a{
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:hover{
+  background: rgb(170, 114, 30);
+  color:rgb(228, 118, 140);
+
+}
