--- a/estilo.css
+++ b/estilo.css
@@ -52,3 +52,36 @@ li a:hover{
   color:rgb(228, 118, 140);
 
 }
+#abelha {
+ width: 15%; 
+}
+.caixaAbelha{
+  position: absolute;
+  top: 45px;
+  width: 90%;
+  height: 120px;
+  background: rgb(209, 167, 104);
+  left: 0;
+  margin: 20px;
+  border-color: coral;
+  border-style: solid;
+  border-width: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+.caixaAbelha2{
+  position: absolute;
+  top: 0px;
+  width: 20%;
+  height: 120px;
+  background: rgb(209, 167, 104);
+  left: 0;
+  margin: 20px;
+  border-color: coral;
+  border-style: solid;
+  border-width: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: end;
+}
