--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,7 @@
 body{
   background: pink;
+  margin: 0;
+  padding: 0;
 }
 h1{
   text-align: center;
@@ -84,4 +86,18 @@ li a:hover{
   padding: 20px;
   display: flex;
   justify-content: end;
+}
+.rodape{
+  position: absolute;
+  width: 100%;
+  height: 35px;
+  background: white;
+  color: rgb(223, 15, 15);
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+}
+.conteudo{
+  position: absolute;
+  top: 45px;
 }
